--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
     <input type="text" id="address-input" placeholder="Search for an address" />
 
     <div id="address-suggestions"></div>
-
+    <div id="result-container">
+      <p id="latitude"></p>
+      <p id="longitude"></p>
+    </div>
     <div id="app"></div>
+
     <script type="module" src="/main.js"></script>
   </body>
 </html>
