--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <input type="text" id="address-input" placeholder="Search for an address" />
     <div id="address-suggestions"></div>
 </div>
-    <div class="result-container">
+    <div id="result-container">
       <p id="latitude"></p>
       <p id="longitude"></p>
     </div>
