--- a/index.html
+++ b/index.html
@@ -30,12 +30,14 @@
 
     <input type="text" id="address-input" placeholder="Search for an address" />
     <div id="address-suggestions"></div>
-</div>
-    <div id="result-container">
-      <p id="latitude"></p>
-      <p id="longitude"></p>
-    </div>
   </div>
+  <div id="result-container">
+    <div class="water-progress">
+      <span class="water-value">30%</span>
+    </div>
+    <span class="watertext">Drought value</span>
+  </div>
+</div>
 
     <script type="module" src="/main.js"></script>
   </body>
