--- a/index.html
+++ b/index.html
@@ -2,25 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+<!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->   
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Klearterra</title>
   </head>
   <body>
-    <main class="bck-img">
+<main class="bck-img">
       <div class="header-background">
         <header class="header container">
           <div class="logo-wrapper">
             <img src="/svg/logo-no-background.png" alt="Logo" class="toplogo" >
            </div>
-          <nav class="nav">
+           <div id = "stamp">
+            Made with &#10084;&#65039; by <a href="https://www.linkedin.com/in/goutam-konapala-phd-bb943280/">GK </a>
+          </div>
+<!--         <nav class="nav">
            <a href="#">About</a>
            <a href="#">Overheads</a>
            <a href="#">Methodology</a>
           </nav>
         </header>
-      </div>
-    </main>
+      </div>--> 
+    </main> 
     <div class="main-body">
       <div class="front-matter">
         <h1 class="first-sentence"><span>How can environment impact <br> your home maintenance?</span></h1>
@@ -31,12 +34,6 @@
     <div id="address-suggestions"></div>
   </div>
   <div id="result-container">
-    <div id = total>
-    <div class="total-progress">
-      <span class="total-value">30%</span>
-    </div>
-    <span class="totaltext">Total Costs</span>
-    </div>
     <div id = energy>
       <div class="energy-progress">
         <span class="energy-value">30%</span>
@@ -53,11 +50,12 @@
           <div class="quantity-progress">
             <span class="quantity-value">30%</span>
           </div>
-          <span class="watertext">Water quantity</span>
+          <span class="quantitytext">Water quantity</span>
           </div>
     </div>
 </div>
 
     <script type="module" src="/main.js"></script>
+
   </body>
 </html>
